# DSWorkout-Advisor

./: .gitignore  package-lock.json  package.json
api/: App.py  db.py  pyproject.toml
api/routes/: graficas.py  informe.py  machine_learning.py  usuarios.py
api_fastapi/: config.py  db.py  main.py  pyproject.toml  test_db.py
api_fastapi/certs/: ca.pem
api_fastapi/routes/: Diagnosticos.py  Recomendacion.py  evaluacion.py  login.py  routine.py  usuarios.py  workout.py
integrar/html/: ConfUsers.html  FisicEstate.html  FisicUsers.html  Login.html  admin.html  crearEjercicio.html  crearRutina.html  estadisticas.html  evaluar.html  fit_intUser.html  howstart.html  profesional.html  register_ad.html  registro.html
integrar/js/: AdminConfUsers.js  Estadisticas.js  Evaluar.js  InicioVerify.js  RegistroUser.js  TableFisic.js  workout.js
my_svelte/: .gitignore  package-lock.json  package.json
my_svelte/src/: app.d.ts  app.html
my_svelte/src/lib/components/: Footer.svelte  Navbar.svelte  RegisterForm.svelte
my_svelte/src/lib/utils/: AuthClient.ts
my_svelte/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
my_svelte/src/routes/confuser_ad/: +page.svelte
my_svelte/src/routes/crearejercicio_prof/: +page.svelte
my_svelte/static/css/: AdminInfo.css  Fijos.css  HowStart.css  IndexCss.css  Users.css  fithome.css  login.css
my_svelte_app/: index.html  package-lock.json  package.json
my_svelte_app/src/: main.ts
my_svelte_app/src/css/: e-trai.css  registro.css
my_svelte_app/src/js/: FormFisicEstate.js  Login.js  RegistroAdmin.js  Reportes.js  UserFunciones.js  workoutTable.js  workoutTable_routine.js
my_svelte_app/src/routes/: +page.svelte  index.html
(+11 files in other folders)
