[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-mysqldb>=2.0.0",
    "fpdf>=1.7.2",
    "jwt>=1.4.0",
    "pandas>=2.3.3",
]

[database]
DATABASE_URL = "postgres://user:password@pg-XXXXXX.aivencloud.com:12345/defaultdb?sslmode=require"
[dependency-groups]
dev = ["uv", "pip"]

