[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-mysqldb>=2.0.0",
    "fpdf>=1.7.2",
    "jwt>=1.4.0",
    "pandas>=2.3.3",
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "ultralytics>=8.3.227",
    "toml>=0.10.2",
    "mysql-connector>=2.2.9",
    "pyjwt>=2.10.1",
    "mysql-connector-python>=9.5.0",
]

[database]
host = ""
user = ""
password = ""
database = ""
port =""
[dependency-groups]
dev = ["uv", "pip"]
