[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "fpdf>=1.7.2",
    "pandas>=2.3.3",
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "ultralytics>=8.3.227",
    "toml>=0.10.2",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
]

[database]
host = ""
user = ""
password = ""
database = ""
port =""
[dependency-groups]
dev = ["uv", "pip"]
